# ryokucha

./: README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
demo/: Application.vala  MainWindow.vala  meson.build
doc/: meson.build
docs/: index.html
docs/ryokucha/: Ryokucha.DropDownText.DropDownText.html  Ryokucha.DropDownText.active_id.html  Ryokucha.DropDownText.append.html  Ryokucha.DropDownText.append_text.html  Ryokucha.DropDownText.changed.html  Ryokucha.DropDownText.dropdown.html  Ryokucha.DropDownText.ellipsize.html  Ryokucha.DropDownText.get_active_text.html  Ryokucha.DropDownText.html  Ryokucha.DropDownText.insert.html  Ryokucha.DropDownText.insert_text.html  Ryokucha.DropDownText.max_width_chars.html  Ryokucha.DropDownText.prepend.html  Ryokucha.DropDownText.prepend_text.html  Ryokucha.DropDownText.remove.html  Ryokucha.DropDownText.remove_all.html  Ryokucha.html  index.htm
lib/: DropDownText.vala  meson.build
